<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="playlist_maker_title">Playlist maker</string>
    <string name="main_screen_search">Поиск</string>
    <string name="main_screen_media">Медиатека</string>
    <string name="main_screen_settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_dark_mode">Темная тема</string>
    <string name="settings_share_app">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_tc">Пользовательское соглашение</string>
    <string name="settings_shareadble_link">https://practicum.yandex.kz/profile/android-developer-plus/</string>
    <string name="settings_shareadble_email">anastasiya.katolikava@yandex.kz</string>
    <string name="settings_shareadble_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_shareadble_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_shareadble_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_main_header">Поиск</string>
    <string name="search">Поиск</string>
    <string name="search_not_found">Ничего не нашлось</string>
    <string name="search_error">Проблемы со связью</string>
    <string name="search_error_check_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_retry">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="media_player_duration">Длительность</string>
    <string name="media_player_album">Альбом</string>
    <string name="media_player_year">Год</string>
    <string name="media_player_type">Жанр</string>
    <string name="media_player_country">Страна</string>
    <string name="media_player_initial_value">00:00</string>
    <string name="media_player_service_title">Playlist Maker</string>
    <string name="media_player_service_working_now_playing">Service for playing music</string>
    <string name="media_player_service_working_now">Our service is working right now!</string>
    <string name="media_title">Медиатека</string>
    <string name="media_tab_title_favorites">Избранные треки</string>
    <string name="media_tab_title_playlist">Плейлисты</string>
    <string name="media_favorites_empty">Ваша медиатека пуста</string>
    <string name="media_playlist_empty">Вы не создали ни одного плейлиста</string>
    <string name="media_add_new_playlist">Новый плейлист</string>
    <string name="media_edit_playlist">Редактировать</string>
    <string name="media_add_new_playlist_title">Добавить в плейлист</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="name">Название</string>
    <string name="name_required">Название *</string>
    <string name="description">Описание</string>
    <string name="close_confirmation">Завершить создание плейлиста?</string>
    <string name="close_confirmation_description">Все несохраненные данные будут потеряны</string>
    <string name="close_confirmation_complete_btn">Завершить</string>
    <string name="close_confirmation_close_cancel">Отмена</string>
    <string name="save_confirmation_playlist">Плейлист</string>
    <string name="save_confirmation_created">создан</string>
    <string name="save_confirmation_updated">обновлен</string>
    <string name="playlist_track">трек</string>
    <string name="playlist_tracks">треков</string>
    <string name="playlist_minute">минут</string>
    <string name="playlist_tracks_added">Добавлено в плейлист</string>
    <string name="playlist_tracks_already_added">Трек уже добавлен в плейлист</string>
    <string name="playlist_track_delete_confirmation">Хотите удалить трек?</string>
    <string name="playlist_track_delete_confirmation_yes">Да</string>
    <string name="playlist_track_delete_confirmation_no">Нет</string>
    <string name="playlist_track_share_info">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_track_not_found">В этом плейлисте нет списка треков</string>
    <string name="playlist_track_share_info_ok">OK</string>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="playlist_delete_confirmation_title">Удалить плейлист</string>
    <string name="playlist_delete_confirmation">Хотите удалить плейлист?</string>
</resources>