<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    android:orientation="vertical"
    android:id="@+id/main"
    android:theme="@style/Base.Theme.PlaylistMaker"
    android:padding="@dimen/main_top_padding">
    <TextView
        android:text="@string/playlist_maker_title"
        style="@style/CommonTitle"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            app:icon="@drawable/search"
            style="@style/MainButtonItem"
            android:text="@string/main_screen_search"
            android:id="@+id/searchId"/>
        <Button
            style="@style/MainButtonItem"
            app:icon="@drawable/media"
            android:text="@string/main_screen_media"
            android:id="@+id/mediaId"/>
        <Button
            style="@style/MainButtonItem"
            android:layout_weight="1"
            app:icon="@drawable/settings"
            android:text="@string/main_screen_settings"
            android:id="@+id/settingsId"/>
    </LinearLayout>
</LinearLayout>