<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playlistCreate"
    android:layout_width="match_parent"
    style="@style/PlaylistCreateContainer"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.PlaylistMaker.Common"
    tools:context=".presentation.ui.media.fragments.PlaylistCreateFragment">

    <LinearLayout
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="@dimen/textbox_padding">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_main_header_small"
            android:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/back"
            app:title="@string/media_add_new_playlist" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clickable="true"

            android:layout_weight="0.6">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/pickerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:background="@drawable/rounded_rectangle"
                style="@style/PlaylistCreateImage"
                android:layout_marginLeft="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_marginRight="@dimen/button_margin"
                android:layout_marginBottom="@dimen/button_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/PlaylistCreateItemImage"/>


            <ImageView
                android:id="@+id/pickerImagePreview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/add_photo" />

        </FrameLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/button_margin"
            android:layout_marginRight="@dimen/button_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tb_name_layout"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:textColorHint="@color/text_input_hint_color"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                android:hint="@string/name_required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tb_name"
                    android:layout_marginBottom="@dimen/textbox_button_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/textbox_padding" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tb_description_layout"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tb_name_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                android:textColorHint="@color/text_input_hint_color"
                app:boxStrokeColor="@color/text_input_layout_stroke_color"
                android:hint="@string/description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tb_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/textbox_padding" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_submit"
                android:enabled="false"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/submit_button"
                android:text="@string/create" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>