<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mediaPlayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    android:orientation="vertical"
    android:padding="@dimen/main_top_padding"
    android:paddingLeft="@dimen/main_top_padding_left"
    android:theme="@style/Base.Theme.PlaylistMaker.Common">
    <Toolbar
        android:id="@+id/tooltip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_main_header_small"
        android:layout_marginBottom="@dimen/main_top_padding">
        <ImageView
            android:id="@+id/backId"
            android:layout_width="@dimen/common_header_icon"
            android:layout_height="@dimen/common_header_icon"
            android:layout_marginLeft="@dimen/common_header_left"
            android:scaleType="centerCrop"
            android:src="@drawable/back"
            app:tint="?attr/colorPrimary" />
    </Toolbar>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollviewdb"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/media_player_margin"
            android:layout_marginEnd="@dimen/media_player_margin"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageTrack"
                app:shapeAppearanceOverlay="@style/TrackImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trackName"
                style="@style/PlayerTrackTitle"
                tools:text="Track Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageTrack"
                android:paddingTop="@dimen/media_player_track_title_padding"
                android:paddingBottom="@dimen/media_player_main_title_padding"
            />
            <TextView
                android:id="@+id/authorName"
                style="@style/PlayerAuthorName"
                tools:text="Author Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/media_player_author_name_title_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trackName"
                />


                <ImageView
                    android:id="@+id/addMedia"
                    style="@style/TrackSettings"
                    android:src="@drawable/add_playlist"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="@dimen/media_player_icon_margin"
                    app:layout_constraintEnd_toStartOf="@id/playMedia"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/authorName"
                    />
                <ImageView
                    android:id="@+id/playMedia"
                    style="@style/TrackPlay"
                    android:src="@drawable/playlist_play"
                    app:layout_constraintEnd_toStartOf="@id/likeMedia"
                    app:layout_constraintStart_toEndOf="@id/addMedia"
                    app:layout_constraintTop_toBottomOf="@id/authorName"
                    />
                <ImageView
                    android:id="@+id/likeMedia"
                    style="@style/TrackSettings"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="@dimen/media_player_icon_margin"
                    android:src="@drawable/playlist_like"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/playMedia"
                    app:layout_constraintTop_toBottomOf="@id/authorName"
                />

            <TextView
                android:id="@+id/time"
                style="@style/PlayerTrackTimeTitle"
                tools:text="00:00"
                android:text="00:00"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/playMedia"
                android:paddingTop="@dimen/media_player_main_title_padding"
                android:paddingBottom="@dimen/media_player_author_name_title_padding"

                />



            <TextView
                android:id="@+id/duration"
                style="@style/PlayerTrackTitleDetails"
                tools:text="Time"
                android:text="@string/media_player_duration"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time"
                android:paddingBottom="@dimen/media_player_description_padding"
            />
            <TextView
                android:id="@+id/durationValue"
                style="@style/PlayerTrackValueDetails"
                tools:text="0:00"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.6"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time"
                android:paddingBottom="@dimen/media_player_description_padding"
            />


            <TextView
                android:id="@+id/album"
                style="@style/PlayerTrackTitleDetails"
                tools:text="Album"
                android:text="@string/media_player_album"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/duration"
                android:paddingBottom="@dimen/media_player_description_padding"
                />
            <TextView
                android:id="@+id/albumValue"
                style="@style/PlayerTrackValueDetails"
                tools:text="text"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.6"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/durationValue"
                android:paddingBottom="@dimen/media_player_description_padding"
                />





            <TextView
                android:id="@+id/year"
                style="@style/PlayerTrackTitleDetails"
                tools:text="Year"
                android:text="@string/media_player_year"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/album"
                android:paddingBottom="@dimen/media_player_description_padding"
                />
            <TextView
                android:id="@+id/yearValue"
                style="@style/PlayerTrackValueDetails"
                tools:text="text"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.6"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/albumValue"
                android:paddingBottom="@dimen/media_player_description_padding"
                />

            <TextView
                android:id="@+id/type"
                style="@style/PlayerTrackTitleDetails"
                tools:text="Type"
                android:text="@string/media_player_type"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/year"
                android:paddingBottom="@dimen/media_player_description_padding"
                />
            <TextView
                android:id="@+id/typeValue"
                style="@style/PlayerTrackValueDetails"
                tools:text="text"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.6"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yearValue"
                android:paddingBottom="@dimen/media_player_description_padding"
                />


            <TextView
                android:id="@+id/country"
                style="@style/PlayerTrackTitleDetails"
                tools:text="Country"
                android:text="@string/media_player_country"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type"
                android:paddingBottom="@dimen/media_player_description_padding"
                />
            <TextView
                android:id="@+id/countryValue"
                style="@style/PlayerTrackValueDetails"
                tools:text="text"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.6"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/typeValue"
                android:paddingBottom="@dimen/media_player_description_padding"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>